fix mob menu z-index

--- a/src/sass/components/_mobile_menu.scss
+++ b/src/sass/components/_mobile_menu.scss
@@ -45,7 +45,7 @@
             margin: 0;
             //box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.04), -2px 2px 2px rgba(0, 0, 0, 0.08), -1px 1px 1px rgba(0, 0, 0, 0.16);
 
-            z-index: 1;
+        
             visibility: visible;
             opacity: 1;
             transform: translateX(0);
